--- a/code/1_fstring_codes.ipynb
+++ b/code/1_fstring_codes.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# \"Python f-string codes I use everyday\"\n",
     "\n",
-    "Code for the following Medium article: **TODO: add link**"
+    "Code for the following Medium article: [Python f-string codes I use every day](https://medium.com/geekculture/python-f-string-codes-i-use-every-day-e03558f12057)"
    ]
   },
   {
@@ -17,11 +17,11 @@
    "source": [
     "**References:**\n",
     "\n",
-    "https://docs.python.org/3/reference/lexical_analysis.html#f-strings\n",
+    "1. https://docs.python.org/3/reference/lexical_analysis.html#f-strings\n",
     "\n",
-    "https://docs.python.org/3/library/string.html#format-specification-mini-language\n",
+    "2. https://docs.python.org/3/library/string.html#format-specification-mini-language\n",
     "\n",
-    "https://strftime.org/"
+    "3. https://strftime.org/"
    ]
   },
   {
@@ -521,7 +521,7 @@
     }
    ],
    "source": [
-    "print(f\"{day:%Y %b %d (%A})\")"
+    "print(f\"{day:%Y %b %d (%A)}\")"
    ]
   },
   {
@@ -559,7 +559,7 @@
      "output_type": "stream",
      "text": [
       "2022-09-01 17:30:45\n",
-      "2023-01-06 14:09:50.384229\n"
+      "2023-01-17 10:15:11.858254\n"
      ]
     }
    ],
@@ -575,7 +575,7 @@
     "now = datetime.now()\n",
     "\n",
     "print(f\"{day_and_time}\")\n",
-    "print(f\"{now}\")  # with mircoseconds"
+    "print(f\"{now}\")  # with microseconds"
    ]
   },
   {
@@ -587,7 +587,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-01-06 14:09:50.384229\n"
+      "2023-01-17 10:15:11.858254\n"
      ]
     }
    ],
@@ -625,7 +625,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-01-06 14:09:50.38\n"
+      "2023-01-17 10:15:11.85\n"
      ]
     }
    ],
@@ -815,7 +815,7 @@
    "source": [
     "## Example\n",
     "\n",
-    "Putting all things together"
+    "Putting all things together."
    ]
   },
   {
