Update link to Pareto Chart article

--- a/code/2_pareto_chart.ipynb
+++ b/code/2_pareto_chart.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# \"How to make Pareto chart in Matplotlib\"\n",
     "\n",
-    "Code for the following Medium article: [update](https://medium.com/@pawjast)\n",
+    "Code for the following Medium article: [How to make Pareto chart in Matplotlib](https://levelup.gitconnected.com/how-to-make-pareto-chart-in-matplotlib-ff9b6ec7fadf)\n",
     "\n",
     "**References:**\n",
     "\n",
