update link to medium article
- convert 0, 1 to bool

--- a/code/3_convert_0_1_to_bool_and_back.ipynb
+++ b/code/3_convert_0_1_to_bool_and_back.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Convert 0,1 to bool and back\n",
     "\n",
-    "Code for the following Medium article: [todo: update](update)\n",
+    "Code for the following Medium article: [Convert 0, 1 to Bool and Back](https://medium.com/python-in-plain-english/convert-0-1-to-bool-and-back-5bf1a65f6b8d)\n",
     "\n",
     "**References:**\n",
     "\n",
