update notebook for empty data container article

--- a/code/4_empty_containers.ipynb
+++ b/code/4_empty_containers.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Empty containers"
+    "# How to create an empty data container\n",
+    "\n",
+    "Code for the following Medium article: [to do: add link](https://medium.com/@pawjast)"
    ]
   },
   {
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +37,7 @@
        "[]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +59,7 @@
        "list"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +80,7 @@
        "[]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +102,7 @@
        "list"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +131,7 @@
        "()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +153,7 @@
        "tuple"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +174,7 @@
        "()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +196,7 @@
        "tuple"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +225,7 @@
        "{}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +247,7 @@
        "dict"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +268,7 @@
        "{}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +290,7 @@
        "dict"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +319,7 @@
        "set()"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +340,7 @@
        "set"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +377,7 @@
        "''"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +399,7 @@
        "str"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +420,7 @@
        "''"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +442,7 @@
        "str"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +463,7 @@
        "''"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +485,7 @@
        "str"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,14 +522,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pjastrz1\\AppData\\Local\\Temp\\ipykernel_13436\\206768602.py:1: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/tmp/ipykernel_9373/206768602.py:1: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
       "  empty_ser_1 = pd.Series()\n"
      ]
     },
@@ -537,7 +539,7 @@
        "Series([], dtype: float64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +560,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,16 +572,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Series([], dtype: int32)"
+       "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +641,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +662,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +753,7 @@
        "e  NaN  NaN  NaN  NaN"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,39 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      A    B    C    D\n",
-      "--  ---  ---  ---  ---\n",
-      "a   nan  nan  nan  nan\n",
-      "b   nan  nan  nan  nan\n",
-      "c   nan  nan  nan  nan\n",
-      "d   nan  nan  nan  nan\n",
-      "e   nan  nan  nan  nan\n"
-     ]
-    }
-   ],
-   "source": [
-    "# DEV\n",
-    "from tabulate import tabulate\n",
-    "\n",
-    "print(\n",
-    "    tabulate(\n",
-    "        empty_df_2,\n",
-    "        headers=empty_df_2.columns,\n",
-    "        tablefmt=\"simple\"\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +835,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -895,9 +865,9 @@
       "Data columns (total 2 columns):\n",
       " #   Column     Non-Null Count  Dtype  \n",
       "---  ------     --------------  -----  \n",
-      " 0   col_int    0 non-null      int32  \n",
+      " 0   col_int    0 non-null      int64  \n",
       " 1   col_float  0 non-null      float64\n",
-      "dtypes: float64(1), int32(1)\n",
+      "dtypes: float64(1), int64(1)\n",
       "memory usage: 0.0+ bytes\n"
      ]
     }
@@ -921,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +917,7 @@
        "array([], dtype=float64)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +939,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -990,12 +960,12 @@
      "text": [
       "class:  ndarray\n",
       "shape:  (0,)\n",
-      "strides:  (8,)\n",
+      "strides:  (0,)\n",
       "itemsize:  8\n",
       "aligned:  True\n",
       "contiguous:  True\n",
       "fortran:  True\n",
-      "data pointer: 0x2956f4d83f0\n",
+      "data pointer: 0x56517ba14eb0\n",
       "byteorder:  little\n",
       "byteswap:  False\n",
       "type: float64\n"
@@ -1016,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1036,12 +1006,12 @@
      "text": [
       "class:  ndarray\n",
       "shape:  (0,)\n",
-      "strides:  (8,)\n",
+      "strides:  (0,)\n",
       "itemsize:  8\n",
       "aligned:  True\n",
       "contiguous:  True\n",
       "fortran:  True\n",
-      "data pointer: 0x2956f4d84e0\n",
+      "data pointer: 0x56517c2d2e80\n",
       "byteorder:  little\n",
       "byteswap:  False\n",
       "type: float64\n"
@@ -1054,17 +1024,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6.23042070e-307, 4.67296746e-307, 1.69121096e-306],\n",
-       "       [7.56597091e-307, 2.31423164e-306, 2.42092166e-322]])"
+       "array([[2.e-323, 2.e-323, 2.e-323],\n",
+       "       [2.e-323, 2.e-323, 2.e-323]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1063,7 @@
       "aligned:  True\n",
       "contiguous:  True\n",
       "fortran:  False\n",
-      "data pointer: 0x295500ce160\n",
+      "data pointer: 0x56517c24fd40\n",
       "byteorder:  little\n",
       "byteswap:  False\n",
       "type: float64\n"
@@ -1106,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1086,7 @@
        "       [1, 1, 1]], dtype=int8)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1116,7 @@
       "aligned:  True\n",
       "contiguous:  True\n",
       "fortran:  False\n",
-      "data pointer: 0x2956f4d8610\n",
+      "data pointer: 0x56517c52fab0\n",
       "byteorder:  little\n",
       "byteswap:  False\n",
       "type: int8\n"
@@ -1167,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1146,7 @@
        "array([], dtype=float64)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1178,7 @@
        "array([], dtype=float64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1210,7 @@
        "array([], dtype=float64)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,16 +1226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([], dtype=int32)"
+       "array([], dtype=int64)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1296,12 +1266,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "01b56d54e41ee5e0320d306e48b99346b32c7e3f136411568156e3d3682080c2"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
