update links to the articles
* create empty containers
* plot normal distribution in matplotlib

--- a/code/4_empty_containers.ipynb
+++ b/code/4_empty_containers.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# How to create an empty data container\n",
     "\n",
-    "Code for the following Medium article: [to do: add link](https://medium.com/@pawjast)"
+    "Code for the following Medium article: [link](https://medium.com/geekculture/how-to-create-an-empty-data-container-a592c2f14ef3)"
    ]
   },
   {
