--- a/code/5_normal_distribution_with_pvalue_and_alpha.ipynb
+++ b/code/5_normal_distribution_with_pvalue_and_alpha.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# \"How to plot a normal distribution in Matplotlib\"\n",
     "\n",
-    "Code for the following Medium article: [UPDATE](https://medium.com/@pawjast)\n",
+    "Code for the following Medium article: [link](https://medium.com/gitconnected/how-to-plot-a-normal-distribution-in-matplotlib-6e32de98bde3)\n",
     "\n",
     "**References:**\n",
     "\n",
