add notebook for art_7 - visualize missing data

--- a/code/6_python_random_module.ipynb
+++ b/code/6_python_random_module.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 11 jobs Python `random` can do for you\n",
     "\n",
-    "Code for the following Medium article: [UPDATE](https://medium.com/@pawjast)\n",
+    "Code for the following Medium article: [link](https://medium.com/python-in-plain-english/11-jobs-pythons-random-module-can-do-for-you-f591914d9cbd)\n",
     "\n",
     "**References:**\n",
     "\n",
