update link to the article: missing data viz

--- a/code/7_pandas_missing_data_viz.ipynb
+++ b/code/7_pandas_missing_data_viz.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 4 (and a half) quick and easy ways to visualise missing data in Python\n",
     "\n",
-    "Code for the following Medium article: [UPDATE](https://medium.com/@pawjast)"
+    "Code for the following Medium article: [link](https://levelup.gitconnected.com/4-and-a-half-quick-and-easy-ways-to-visualise-missing-data-in-python-1e648ea82f38)"
    ]
   },
   {
