Update links to articles

--- a/code/8_hilbert_matrix.ipynb
+++ b/code/8_hilbert_matrix.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Using `Numpy` and `Matplotlib`.\n",
     "\n",
-    "Code for the following Medium article: [UPDATE](https://medium.com/@pawjast)\n",
+    "Code for the following Medium article: [link](https://medium.com/geekculture/visualize-hilbert-matrix-in-python-65955b63b115)\n",
     "\n",
     "**Hilbert matrix:**\n",
     "\n",
