--- a/code/9_histograms.ipynb
+++ b/code/9_histograms.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to create a histogram that doesn't suck"
+    "# How to create a histogram that doesn't suck\n",
+    "\n",
+    "Code for the following Medium article: [link](https://medium.com/gitconnected/how-to-create-a-histogram-that-doesnt-suck-cf8caead1f81)"
    ]
   },
   {
