--- a/code/15_updating_plots_appearance_with_rcParams.ipynb
+++ b/code/15_updating_plots_appearance_with_rcParams.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5 ways to update plot appearance with `rcParams`"
+    "# 5 ways to update plot appearance with `rcParams`\n",
+    "\n",
+    "Code for the following Medium article: [update](https://medium.com/@pawjast)"
    ]
   },
   {
