update the links to articles

--- a/code/15_updating_plots_appearance_with_rcParams.ipynb
+++ b/code/15_updating_plots_appearance_with_rcParams.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 5 ways to update plot appearance with `rcParams`\n",
     "\n",
-    "Code for the following Medium article: [update](https://medium.com/@pawjast)"
+    "Code for the following Medium article: [link](https://medium.com/gitconnected/5-ways-to-update-plot-look-in-matplotlib-974ca4d7958f)"
    ]
   },
   {
