--- a/code/17_using_custom_fonts_in_matplotlib.ipynb
+++ b/code/17_using_custom_fonts_in_matplotlib.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to use custom fonts in `Matplotlib`"
+    "# How to use custom fonts in `Matplotlib`\n",
+    "\n",
+    "Code for the following Medium article: [link](https://medium.com/gitconnected/how-to-use-custom-fonts-in-matplotlib-plots-d8450b929e76)"
    ]
   },
   {
