update link to the article

--- a/code/19_3_ways_to_make_your_plot_look_good.ipynb
+++ b/code/19_3_ways_to_make_your_plot_look_good.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# How to Go From Default to Amazing Looking Plots in 3 Easy Steps\n",
     "\n",
-    "Code for the following Medium article: [update](https://medium.com/@pawjast)\n",
+    "Code for the following Medium article: [link](https://medium.com/gitconnected/how-to-go-from-default-to-amazing-looking-plots-in-3-easy-steps-a618b00d0db1)\n",
     "\n",
     "The changes that make the difference:  \n",
     "* remove spines\n",
