--- a/code/22_load_csv_with_pandas.ipynb
+++ b/code/22_load_csv_with_pandas.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "<generator object Path.glob at 0x78edca539f10>"
+       "<generator object Path.glob at 0x7df60559df10>"
       ]
      },
      "execution_count": 3,
@@ -1262,7 +1262,7 @@
     {
      "data": {
       "text/plain": [
-       "<generator object Path.rglob at 0x78ed8454de00>"
+       "<generator object Path.rglob at 0x7df5bf389e00>"
       ]
      },
      "execution_count": 20,
