Add paragraph to art_23 code:
- relative paths

--- a/code/23_pathlib_primer.ipynb
+++ b/code/23_pathlib_primer.ipynb
@@ -239,6 +239,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Relative paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[path.relative_to(my_path) for path in my_path.rglob(\"*\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Various filters"
    ]
   },
