--- a/code/23_pathlib_primer.ipynb
+++ b/code/23_pathlib_primer.ipynb
@@ -244,9 +244,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('more_data'),\n",
+       " PosixPath('hi.md'),\n",
+       " PosixPath('data1.csv'),\n",
+       " PosixPath('data2.csv'),\n",
+       " PosixPath('abc.txt'),\n",
+       " PosixPath('cde.txt'),\n",
+       " PosixPath('temp'),\n",
+       " PosixPath('more_data/abc.csv'),\n",
+       " PosixPath('more_data/go_deeper'),\n",
+       " PosixPath('more_data/whatshere.md'),\n",
+       " PosixPath('more_data/hello.html'),\n",
+       " PosixPath('more_data/yyy.txt'),\n",
+       " PosixPath('more_data/data3.csv'),\n",
+       " PosixPath('more_data/xxx.txt'),\n",
+       " PosixPath('more_data/go_deeper/abcd.py'),\n",
+       " PosixPath('more_data/go_deeper/surprise.csv'),\n",
+       " PosixPath('temp/dead_end')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[path.relative_to(my_path) for path in my_path.rglob(\"*\")]"
    ]
@@ -263,31 +290,6 @@
    "metadata": {},
    "source": [
     "### List all files only"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/hi.md'),\n",
-       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/data1.csv'),\n",
-       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/data2.csv'),\n",
-       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/abc.txt'),\n",
-       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/cde.txt')]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# In current folder - way 1\n",
-    "[path for path in my_path.iterdir() if path.is_file()]"
    ]
   },
   {
@@ -311,13 +313,38 @@
     }
    ],
    "source": [
+    "# In current folder - way 1\n",
+    "[path for path in my_path.iterdir() if path.is_file()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/hi.md'),\n",
+       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/data1.csv'),\n",
+       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/data2.csv'),\n",
+       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/abc.txt'),\n",
+       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/cde.txt')]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# In current folder - way 2\n",
     "[path for path in my_path.glob(\"*\") if path.is_file()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +365,7 @@
        " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/more_data/go_deeper/surprise.csv')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,28 +380,6 @@
    "metadata": {},
    "source": [
     "### List all directories only"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/more_data'),\n",
-       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/temp')]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# In current folder - way 1\n",
-    "[path for path in my_path.iterdir() if path.is_dir()]"
    ]
   },
   {
@@ -395,8 +400,8 @@
     }
    ],
    "source": [
-    "# In current folder - way 2\n",
-    "[path for path in my_path.glob(\"*\") if path.is_dir()]"
+    "# In current folder - way 1\n",
+    "[path for path in my_path.iterdir() if path.is_dir()]"
    ]
   },
   {
@@ -408,9 +413,7 @@
      "data": {
       "text/plain": [
        "[PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/more_data'),\n",
-       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/temp'),\n",
-       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/more_data/go_deeper'),\n",
-       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/temp/dead_end')]"
+       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/temp')]"
       ]
      },
      "execution_count": 14,
@@ -419,8 +422,8 @@
     }
    ],
    "source": [
-    "# In current folder and sub directories\n",
-    "[path for path in my_path.rglob(\"*\") if path.is_dir()]"
+    "# In current folder - way 2\n",
+    "[path for path in my_path.glob(\"*\") if path.is_dir()]"
    ]
   },
   {
@@ -432,12 +435,36 @@
      "data": {
       "text/plain": [
        "[PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/more_data'),\n",
+       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/temp'),\n",
+       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/more_data/go_deeper'),\n",
+       " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/temp/dead_end')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In current folder and sub directories\n",
+    "[path for path in my_path.rglob(\"*\") if path.is_dir()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/more_data'),\n",
        " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/more_data/go_deeper'),\n",
        " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/temp'),\n",
        " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/temp/dead_end')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +494,7 @@
        " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/cde.txt')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +518,7 @@
        " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/more_data/go_deeper/surprise.csv')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +547,7 @@
        " PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/more_data/go_deeper/abcd.py')]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +581,7 @@
        "PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4/hi.md')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +602,7 @@
        "'hi.md'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +622,7 @@
        "'hi'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +642,7 @@
        "'.md'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +662,7 @@
        "PosixPath('/home/pawjast/Documents/my github/medium/code/datasets/data_4')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +691,7 @@
        " 'hi.md')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
